<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Login page -->
    <string name="app_name">Git Hub Navigator</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Login</string>
    <string name="button_register">Register</string>
    <string name="username_message">Username</string>
    <string name="password_message">Password</string>
    
    <!-- Http request URL's. -->
    <string name="AUTHENTICATE_URL">https://api.github.com</string>
    <string name="FETCH_REPOS_URL">https://api.github.com/user/repos</string>
    
    <!-- Action codes used to indentify different actions to the list fragment -->
    <string name="REPO_ACTION">repo_action</string>
    <string name="NEWS_ACTION">news_action</string>
    <string name="REPO_NEWS_ACTION">repo_news_action</string>
    <string name="LOGOUT_ACTION">logout_action</string>
    <string name="action_refresh">Refresh</string>
    <string name="REPO_COMMIT_NEWS_ACTION">repo_commit_news_action</string>
    
    <!-- The credentials for the test user of the github project. -->
    <string name="TEST_USER_USERNAME">group10testuser</string>
    <string name="TEST_USER_PASSWORD">eda397group10</string>
    
    <!-- Json keys. -->
    <string name="REPOSITORY_JSON_KEY">full_name</string>
    
    <!-- Shared preferences login credentials. -->
    <string name="LOGIN_CREDENTIALS_PREFERENCE_NAME">Login Credentials</string>
    <string name="AUTH_PREFERENCE">Authenticated</string>
    <string name="USERNAME_PREFERENCE">Username</string>
    <string name="PASSWORD_PREFERENCE">Password</string>
    
    <!-- Shared preferences settings -->
    <string name="SETTINGS_PREFERENCES">Application Settings</string>
    <string name="CHECK_FOR_NOTIFICATIONS">Check for notifications</string>
    <string name="INTERVAL_SPINNER_SELECTED">Interval spinner selected</string>
    <string name="VIBRATION_VALUE_SELECTED">Vibration on/off</string>
    <string name="LED_LIGHT_VALUE_SELECTED">Flash LED lights on/off</string>
    <string name="SECONDS_BETWEEN_UPDATES">Github notifications interval</string>
    <string name="LAST_POLL">Last poll for new events</string>
    <string name="CURRENT_REPOSITORY_PREFERENCE">Current Repository</string>
    <string name="HAS_CURRENT_REPOSITORY_PREFERENCE">Has Current Repository</string>
    
    <!-- Settings page  -->
     <string name="notification_setting">Notifications: </string>
     <string-array name="on_off_array">
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string name="notification_interval">Check for new notifications every: </string>
    <string-array name="intervals_array">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string name="vibration_setting">Vibrate: </string>
    <string name="led_setting">Flash LED Lights: </string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <!--<item >Home</item>-->
        <item>News</item>
        <!--<item>Tasks</item>-->
        <item>Settings</item> 
        <item>Logout</item>       
        <item>Repositories</item>
        
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <!--<item>@drawable/ic_home</item>-->
        <!--News-->
        <item>@drawable/news</item>
        <!--Tasks-->
        <!--<item>@drawable/tasks</item>-->
        <!--Settings-->
        <item>@drawable/settings</item>
        <!--Logout-->
        <item>@drawable/logout</item>        
        <!--Repositories-->
        <item>@drawable/repository</item>
        <!--Repository-->
        <item>@drawable/repo</item>  
    </array>
    
    
    <!-- Project page -->
    <string name="title_activity_project_page">Projects</string>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    

</resources>
