<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_setting" />
    
    <Spinner
    android:id="@+id/notification_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_interval" />
    
    <Spinner
    android:id="@+id/interval_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration_setting" />
    
    <Spinner
    android:id="@+id/vibration_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led_setting" />
    
    <Spinner
    android:id="@+id/led_spinner"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" />

</LinearLayout>