<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eda397.group10.navigator.MainActivity$PlaceholderFragment" >
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/git_logo" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/login_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="#d8d8d8"
        android:ems="10"
        android:hint="@string/password_message"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignRight="@+id/login_password"
        android:layout_below="@+id/logo"
        android:layout_marginTop="14dp"
        android:background="#d8d8d8"
        android:ems="10"
        android:hint="@string/username_message" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/register_button"
        style="@style/CustomStyleButton"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="50dp"
        android:text="@string/button_register" />

    <Button
        android:id="@+id/login_button"
        style="@style/CustomStyleButton"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/register_button"
        android:layout_alignBottom="@+id/register_button"
        android:layout_alignRight="@+id/login_password"
        android:text="@string/button_send" />

</RelativeLayout>